testdata/p4_16_errors/issue3611.p4
action NoAction() {}
action a() {}
action b() {}
action d() {}
control c()
{
  table t {
    actions = {a; b;}
  }
  apply {
    switch(t.apply().action_run) {
      1: {} // { dg-error "" }
      default: {}
    }
  }
}
